[package]
name = "ckb-rpc-test"
version = "0.1.0"
authors = ["Brian Anderson <andersrb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
anyhow = "1.0.28"
failure = "0.1.5"

ckb-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.30.0-rc1" }
ckb-sdk = { git = "https://github.com/nervosnetwork/ckb-cli", tag = "v0.30.0" }
